--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,13 @@
 </head>
 
 <body>
+    <div class="wrep">
+        <div class="ball">
+            <div class="answer">
+                <span class="text">click</span>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
